--- a/significance.css
+++ b/significance.css
@@ -148,6 +148,6 @@ a {
   font-family: 'Lora', serif;
   font-size: 20px;
   padding-left: 100px;
-  /* padding-top: 295px; */
+  padding-top: 25px;
   padding-bottom: 5px;
 }
